# tandem

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md  clippy.toml  context7.json  dist-workspace.toml  hk.pkl  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  rust-toolchain.toml  skills  skills-lock.json  tndm-dev
.agents/plugins/: marketplace.json
.agents/skills/agent-orchestrator/: README.md  SKILL.md
.agents/skills/git-commit/: SKILL.md
.agents/skills/pi-upgrade/: README.md  SKILL.md
.agents/skills/web-fetch-to-markdown/: SKILL.md
.claude/: CLAUDE.md  settings.json
.claude-plugin/: marketplace.json
.claude/hooks/: block-protected-files.sh  post-rust-compile.sh
.claude/skills/: web-fetch-to-markdown
.codex/: config.toml
.github/: renovate.json5
.github/workflows/: ci.yml  mise-lock.yml  publish-npm.yml  release-please.yml  release.yml  upload-plugin.yml
.pi/: settings.json
.pi/supi/: config.json
.tndm/tickets/TNDM-2D8XY8/: archive.md  content.md  meta.toml  state.toml
.tndm/tickets/TNDM-4ZS3Y3/: archive.md  content.md  meta.toml  plan.md  state.toml
.tndm/tickets/TNDM-6MX69J/: archive.md  content.md  meta.toml  plan.md  state.toml
.tndm/tickets/TNDM-6SHHY9/: archive.md  content.md  meta.toml  state.toml
.tndm/tickets/TNDM-6Z9HRT/: content.md  meta.toml  state.toml
.tndm/tickets/TNDM-6ZSE0C/: archive.md  content.md  meta.toml  state.toml
.tndm/tickets/TNDM-73D9M2/: meta.toml  state.toml
.tndm/tickets/TNDM-7960FC/: archive.md  content.md  meta.toml  plan.md  state.toml
.tndm/tickets/TNDM-86AP1S/: archive.md  content.md  meta.toml  plan.md  state.toml
.tndm/tickets/TNDM-8C4328/: archive.md  content.md  meta.toml  state.toml
.tndm/tickets/TNDM-8Z70P0/: archive.md  content.md  meta.toml  state.toml
.tndm/tickets/TNDM-A41R99/: archive.md  content.md  meta.toml  state.toml
.tndm/tickets/TNDM-A79509/: archive.md  content.md  meta.toml  plan.md  state.toml
.tndm/tickets/TNDM-AC5MQH/: archive.md  content.md  meta.toml  plan.md  state.toml
.tndm/tickets/TNDM-AKFD1P/: archive.md  content.md  meta.toml  plan.md  state.toml
.tndm/tickets/TNDM-AXE1NT/: content.md  meta.toml  state.toml
.tndm/tickets/TNDM-BPD63S/: archive.md  content.md  meta.toml  state.toml
.tndm/tickets/TNDM-C7E0T6/: archive.md  content.md  meta.toml  plan.md  state.toml
.tndm/tickets/TNDM-CNFYN0/: archive.md  content.md  meta.toml  state.toml
.tndm/tickets/TNDM-D4QM0X/: archive.md  content.md  meta.toml  plan.md  state.toml
crates/tandem-cli/: Cargo.toml
crates/tandem-cli/src/: main.rs
crates/tandem-cli/src/cli/: awareness.rs  doc.rs  fmt.rs  mod.rs  render.rs  ticket.rs  ticket_ctx.rs  util.rs
crates/tandem-cli/src/cli/ticket/: create.rs  list.rs  mod.rs  show.rs  sync.rs  task.rs  update.rs
crates/tandem-cli/tests/: awareness_cli_tests.rs  fmt_cli_tests.rs  ticket_cli_tests.rs  ticket_config_tests.rs  ticket_create_tests.rs  ticket_list_tests.rs  ticket_sync_tests.rs  ticket_task_tests.rs  ticket_update_tests.rs
crates/tandem-cli/tests/common/: mod.rs
crates/tandem-core/: Cargo.toml
crates/tandem-repo/: Cargo.toml
crates/tandem-repo/src/: lib.rs
crates/tandem-repo/tests/: awareness_repo_tests.rs
crates/tandem-storage/: Cargo.toml
crates/tandem-storage/src/: lib.rs
crates/tandem-storage/tests/: awareness_storage_tests.rs  config_tests.rs  create_ticket_reliability_tests.rs  tempfile_smoke.rs  ticket_store_tests.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: architecture.md  decisions.md  references.md  releasing.md  vision.md
docs/plans/: 2026-03-03-ticket-commands-implementation-plan.md  2026-03-03-ticket-storage-design.md  2026-03-07-awareness-mvp-design.md  2026-03-08-awareness-mvp-implementation-plan.md
plugin/tndm/: README.md
plugins/supi-flow/: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
plugins/tndm/: README.md  hooks.json
src/: lib.rs
(+312 files in other folders)
