[package]
name = "tandem"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[[bin]]
name = "tndm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.23", features = ["derive"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
