[workspace]
members = [
  "crates/tandem-core",
  "crates/tandem-storage",
  "crates/tandem-repo",
  "crates/tandem-cli",
  "crates/xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
anyhow = "1.0.86"
cargo_metadata = "0.23.0"
clap = { version = "4.5.23", features = ["derive"] }
rand = "0.10"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
time = { version = "0.3", features = ["formatting"] }
toml = "1.0"
tandem-core = { path = "crates/tandem-core" }
tandem-storage = { path = "crates/tandem-storage" }
tandem-repo = { path = "crates/tandem-repo" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
