[package]
name = "tandem-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository = "https://github.com/mrclrchtr/tandem"

[[bin]]
name = "tndm"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tabled = "0.20.0"
tandem-core.workspace = true
tandem-repo.workspace = true
tandem-storage.workspace = true
time.workspace = true

[dev-dependencies]
regex = "=1.12.3"
serde_json.workspace = true
tempfile.workspace = true

[package.metadata.dist]
dist = true

[lints]
workspace = true
