[package]
name = "tandem-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
description = "Git-aware ticket coordination system for AI agents in a monorepo"
homepage = "https://github.com/mrclrchtr/tandem"
repository = "https://github.com/mrclrchtr/tandem"

[[bin]]
name = "tndm"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tabled = "0.20.0"
tandem-core.workspace = true
tandem-repo.workspace = true
tandem-storage.workspace = true
termimad = "0.34.1"
time.workspace = true

[dev-dependencies]
regex = "=1.12.3"
serde_json.workspace = true
tempfile.workspace = true

[package.metadata.dist]
dist = true

[lints]
workspace = true
