[package]
name = "tandem-repo"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
tandem-core.workspace = true
tempfile.workspace = true

[dev-dependencies]
tandem-storage.workspace = true
tempfile.workspace = true

[lints]
workspace = true
